# terraform-aws-lambda-container

./: .gitignore  LICENSE  README.md  main.tf  outputs.tf  variables.tf
examples/bun/: Dockerfile  deploy.sh  index.ts  main.tf  package.json  variables.tf
examples/deno/: Dockerfile  deploy.sh  main.tf  main.ts
examples/python-fastapi/: Dockerfile  deploy.sh  main.tf  pyproject.toml
examples/python-fastapi/app/: main.py
